VSCP-1724: Return Endpoint mapping in Pool credentials (#1252)
