# core/core-api/core-servergen/oas_json_gen.go
@@ -1221,13 +1221,24 @@ func (s *OntapCredentialsV1) encodeFields(e *jx.Encoder) {
 			s.AuthType.Encode(e)
 		}
 	}
+	{
+		if s.OntapEndpoints != nil {
+			e.FieldStart("ontapEndpoints")
+			e.ArrStart()
+			for _, elem := range s.OntapEndpoints {
+				elem.Encode(e)
+			}
+			e.ArrEnd()
+		}
+	}
 }
 
-var jsonFieldsNameOfOntapCredentialsV1 = [4]string{
+var jsonFieldsNameOfOntapCredentialsV1 = [5]string{
 	0: "secret_id",
 	1: "certificate_id",
 	2: "password",
 	3: "auth_type",
+	4: "ontapEndpoints",
 }
 
 // Decode decodes OntapCredentialsV1 from json.
@@ -1278,6 +1289,23 @@ func (s *OntapCredentialsV1) Decode(d *jx.Decoder) error {
 			}(); err != nil {
 				return errors.Wrap(err, "decode field \"auth_type\"")
 			}
+		case "ontapEndpoints":
+			if err := func() error {
+				s.OntapEndpoints = make([]OntapEndpoint, 0)
+				if err := d.Arr(func(d *jx.Decoder) error {
+					var elem OntapEndpoint
+					if err := elem.Decode(d); err != nil {
+						return err
+					}
+					s.OntapEndpoints = append(s.OntapEndpoints, elem)
+					return nil
+				}); err != nil {
+					return err
+				}
+				return nil
+			}(); err != nil {
+				return errors.Wrap(err, "decode field \"ontapEndpoints\"")
+			}
 		default:
 			return d.Skip()
 		}
@@ -1298,6 +1326,119 @@ func (s *OntapCredentialsV1) MarshalJSON() ([]byte, error) {
 
 // UnmarshalJSON implements stdjson.Unmarshaler.
 func (s *OntapCredentialsV1) UnmarshalJSON(data []byte) error {
+	d := jx.DecodeBytes(data)
+	return s.Decode(d)
+}
+
+// Encode implements json.Marshaler.
+func (s *OntapEndpoint) Encode(e *jx.Encoder) {
+	e.ObjStart()
+	s.encodeFields(e)
+	e.ObjEnd()
+}
+
+// encodeFields encodes fields.
+func (s *OntapEndpoint) encodeFields(e *jx.Encoder) {
+	{
+		e.FieldStart("ip")
+		e.Str(s.IP)
+	}
+	{
+		e.FieldStart("dns")
+		e.Str(s.DNS)
+	}
+}
+
+var jsonFieldsNameOfOntapEndpoint = [2]string{
+	0: "ip",
+	1: "dns",
+}
+
+// Decode decodes OntapEndpoint from json.
+func (s *OntapEndpoint) Decode(d *jx.Decoder) error {
+	if s == nil {
+		return errors.New("invalid: unable to decode OntapEndpoint to nil")
+	}
+	var requiredBitSet [1]uint8
+
+	if err := d.ObjBytes(func(d *jx.Decoder, k []byte) error {
+		switch string(k) {
+		case "ip":
+			requiredBitSet[0] |= 1 << 0
+			if err := func() error {
+				v, err := d.Str()
+				s.IP = string(v)
+				if err != nil {
+					return err
+				}
+				return nil
+			}(); err != nil {
+				return errors.Wrap(err, "decode field \"ip\"")
+			}
+		case "dns":
+			requiredBitSet[0] |= 1 << 1
+			if err := func() error {
+				v, err := d.Str()
+				s.DNS = string(v)
+				if err != nil {
+					return err
+				}
+				return nil
+			}(); err != nil {
+				return errors.Wrap(err, "decode field \"dns\"")
+			}
+		default:
+			return d.Skip()
+		}
+		return nil
+	}); err != nil {
+		return errors.Wrap(err, "decode OntapEndpoint")
+	}
+	// Validate required fields.
+	var failures []validate.FieldError
+	for i, mask := range [1]uint8{
+		0b00000011,
+	} {
+		if result := (requiredBitSet[i] & mask) ^ mask; result != 0 {
+			// Mask only required fields and check equality to mask using XOR.
+			//
+			// If XOR result is not zero, result is not equal to expected, so some fields are missed.
+			// Bits of fields which would be set are actually bits of missed fields.
+			missed := bits.OnesCount8(result)
+			for bitN := 0; bitN < missed; bitN++ {
+				bitIdx := bits.TrailingZeros8(result)
+				fieldIdx := i*8 + bitIdx
+				var name string
+				if fieldIdx < len(jsonFieldsNameOfOntapEndpoint) {
+					name = jsonFieldsNameOfOntapEndpoint[fieldIdx]
+				} else {
+					name = strconv.Itoa(fieldIdx)
+				}
+				failures = append(failures, validate.FieldError{
+					Name:  name,
+					Error: validate.ErrFieldRequired,
+				})
+				// Reset bit.
+				result &^= 1 << bitIdx
+			}
+		}
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+
+	return nil
+}
+
+// MarshalJSON implements stdjson.Marshaler.
+func (s *OntapEndpoint) MarshalJSON() ([]byte, error) {
+	e := jx.Encoder{}
+	s.Encode(&e)
+	return e.Bytes(), nil
+}
+
+// UnmarshalJSON implements stdjson.Unmarshaler.
+func (s *OntapEndpoint) UnmarshalJSON(data []byte) error {
 	d := jx.DecodeBytes(data)
 	return s.Decode(d)
 }
